# LimwanpoPolymarketAI

./: .env.example  .gitignore  .replit  ACTIVE_LINKAGE_AUDIT.md  AI_DECISION_INTEGRITY_AUDIT.md  AI_GUARDIAN.md  ALPHA_DISCOVERY_REPORT.md  AMM_REPRICE_REPORT.md  ARCHITECTURE.md  AUDIT5_EXECUTIVE_SUMMARY.md  AUDIT_REPORT.md  BACKEND_DEPENDENCY_MAP.md  CONSTITUTION.md  DATABASE.md  DATA_RULES.md  DEF002_ROOT_CAUSE_REPORT.md  DEPTH_VARIATION_AUDIT.md  FINAL_ARCHITECTURE_DECISION.md  FINAL_ARCHITECTURE_VERIFICATION.md  FINAL_HYPOTHESIS_REPORT.md  FRONTEND_DEPENDENCY_MAP.md  IDENTITY_CONFLICT_REPORT.md  LIVE_BEHAVIOR_AUDIT.md  LIVE_MARKET_AUDIT.md  MARKET_READINESS_AUDIT.md  MASTER_OPERATING_PROMPT.md  NEXT_BUILD_TASKS.md  ORDERBOOK_FORENSICS.md  PHASE2_ARCHITECTURE_MIGRATION.md  PHASE3_DECISION_AUDIT.md  PHASE_GATE.md  PRICE_DISCOVERY_AUDIT.md  PROJECT_RULES.md  PROJECT_STATUS.md  README.md  REAL_DATA_AUDIT.md  REPLACEMENT_FORENSICS.md  ROADMAP_NEXT_PHASE.md  ROLLOVER_AUDIT.md  SIGNAL_FEASIBILITY_REPORT.md  (+38 more)
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--24-34-LimwanpoPolymarketAI-is-a-Quant-Bot-not-a-direct_1782273092923.txt  Pasted--CONTINUE-PHASE-5-IMPLEMENTATION-Continue-from-the-prev_1783057486227.txt  Pasted--DESIGN-TASK-Portfolio-Decision-Framework-Pre-Layer-11-_1782273719589.txt  Pasted--DOCUMENTATION-CORRECTION-DIRECTIVE-LIMWANPOPOLYMARKETA_1782272209089.txt  Pasted--DOCUMENTATION-CORRECTION-TASK-LIMWANPOPOLYMARKETAI-Obj_1782272672375.txt  Pasted--LIMWANPO-AI-AI-DECISION-INTEGRITY-AUDIT-REMEDIATION-ST_1783658156168.txt  (+248 more)
audit5_raw/: part3_live.json  (+4 more)
(+325 files in other folders)
