[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "fastapi==0.111.1",
    "httpx==0.27.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "redis==5.0.7",
    "sqlalchemy[asyncio]==2.0.31",
    "structlog==24.2.0",
    "uvicorn[standard]==0.30.1",
]
